Update ComputePanelWidth calculation to properly handle rotations

Bug: 698737
Change-Id: I954b7c6e2aa1b56a742a4a2787093fa413b5f47c
Reviewed-on: https://chromium-review.googlesource.com/676202
Reviewed-by: Becca Hughes <beccahughes@chromium.org>
Reviewed-by: Steve Kobes <skobes@chromium.org>
Commit-Queue: Tommy Steimel <steimel@chromium.org>
Cr-Commit-Position: refs/heads/master@{#504262}
Former-commit-id: b2664ce7f1a07c96591f1039ba0d475857eef484